--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
     "firebase": "^12.3.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
