--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "firebase": "^12.3.0",
     "pinia": "^3.0.3",
+    "vite-plugin-vuetify": "^2.1.2",
     "vue": "^3.5.22",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vuetify": "^3.10.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
